--- a/html/css/mbti_result_fail_js.css
+++ b/html/css/mbti_result_fail_js.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    background: black;
     font-family: serif;
     color: #111;
     width: 100vw;
@@ -12,7 +11,6 @@ body {
 
 /* 메인 컨테이너 내 컨텐츠 세로로 정렬 */
 .container {
-    background-color: white;
     width: 70vw;
     height: 100vh;
     display: flex;
@@ -21,7 +19,6 @@ body {
 
 /* 네비게이션 바 */
 .navbar {
-    background-color: green;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +28,6 @@ body {
 /* 네비게이션 바 정렬 1:2:1 비율조정 */
 .navbar-left,
 .navbar-right {
-    background-color: red;
     flex: 1;
     display: flex;
     align-items: center;
@@ -39,7 +35,6 @@ body {
 }
 
 .navbar-center {
-    background-color: orange;
     flex: 2;
     display: flex;
     justify-content: center;
@@ -60,7 +55,6 @@ body {
 
 /* 네비게이션 메뉴 스타일 */
 .nav-menu {
-    background-color: yellowgreen;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -86,37 +80,33 @@ body {
 
 /*메인 콘텐츠 */
 .main-content {
-    background-color: blueviolet;
     display: flex;
     flex-direction: row;
     justify-items: center;
     align-items: center;
     width: 70vw; /* 1200px → 70vw */
     height: 90vh; /* 600px → 90vh */
-    gap: 3vw; /* 90px → 3vw */
+    gap: 9vw; /* 90px → 3vw */
 }
 
 /* 좌측 MBTI 이미지 크기 */
 .main-content img {
-    background-color: blue;
     width: 30vw; /* 450px → 30vw */
-    height: 70vh; /* 500px → 70vh */
+    height: auto; /* 500px → 70vh */
     object-fit: cover;
-    margin-left: 4.5vw; /* 100px → 4.5vw */
+    margin-left: 2vw; /* 100px → 2vw */
 }
 
 .right-content {
-    background-color: blue;
     width: 30vw; /* 450px → 30vw */
     height: 70vh; /* 550px → 70vh */
     color: black;
     font-size: 1.8rem; /* 30px → 1.8rem */
     font-weight: bold;
-    margin-right: 6.5vw; /* 100px → 6.5vw */
+    margin-right: 2vw; /* 100px → 2vw */
 }
 
 .button-wrap {
-    background-color: bisque;
     display: flex;
     flex-direction: column;
     justify-content: center;
