--- a/html/css/mbti_result_js.css
+++ b/html/css/mbti_result_js.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    background: #fff;
     font-family: serif;
     color: #111;
     width: 100vw;
@@ -22,8 +21,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
-    height: 10vh; /* 100px → 7vh */
+    height: 10vh; /* 100px → 10vh */
 }
 
 .navbar-left,
@@ -31,6 +29,7 @@ body {
     flex: 1;
     display: flex;
     align-items: center;
+    height: 10vh;
 }
 
 .navbar-center {
@@ -39,6 +38,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-left: 5vw; /* 70px → 5vw */
+    height: 10vh;
 }
 
 .navbar-left {
@@ -53,6 +53,8 @@ body {
 .nav-menu {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 10vh;
     gap: 2.7vw; /* 40px → 2.7vw */
     list-style: none;
     padding: 0;
@@ -76,8 +78,9 @@ body {
 .layout-content {
     display: flex;
     flex-direction: column;
-    width: 70vw; /* 1000px → 65vw */
-    height: 85vh; /* 580px → 38vh */
+    width: 70vw; /* 1000px → 70vw */
+    height: 90vh; /* 580px → 90vh */
+    gap: 2vh;
 }
 
 /* 메인 콘텐츠 */
@@ -86,14 +89,15 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 70vw; /* 1000px → 65vw */
-    height: 70vh; /* 600px → 40vh */
+    width: 70vw; /* 1000px → 70vw */
+    height: 80vh; /* 600px → 80vh */
     margin-top: 6vh;
     gap: 6vw; /* 90px → 6vw */
 }
 
 /* 좌측 MBTI 이미지 크기 */
 .main-content img {
+    background-color: gray;
     width: 29vw; /* 450px → 29vw */
     height: 29vw; /* 450px → 29vw */
     object-fit: contain;
@@ -110,7 +114,7 @@ body {
 .button-wrap {
     display: flex;
     justify-content: center;
-    margin-bottom: 1.4vw; /* 20px → 1.4vw */
+    margin-bottom: 4vh; /* 20px → 4vh */
 }
 
 .btn-home {
